--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <section class="container principal">
         <div class="container__caixa">
-            <h1 class="titulo__titulo"> Com o Combo+, você pode aproveitar a <br>Alura e o Alura Lingua por um preço
-                único.</h1>
             <img src="assets/img/Combo.png" alt="O Combo+ é a junção do Alura+ com alura línguas"
-                class="container__imagem">
+            class="container__imagem">
+            <h1 class="container__titulo"> Com o Combo+, você pode aproveitar a <br>Alura e o Alura Lingua por um preço
+                único.</h1>
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
