Ajustando @media query

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
             <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar Combo+</a>
         </div>
-        <img src="assets/img/Telas.png" alt="Tela da alura plus e do alura linguas" class="secundario_imagem">
+        <img src="assets/img/Telas.png" alt="Tela da alura plus e do alura linguas" class="secundario__imagem">
     </section>
 
     <section class="container secundario">
