--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container__caixa">
             <img src="assets/img/Combo.png" alt="O Combo+ é a junção do Alura+ com alura línguas"
             class="container__imagem">
-            <h1 class="container__titulo"> Com o Combo+, você pode aproveitar a <br>Alura e o Alura Lingua por um preço
+            <h1 class="container__titulo"> Com o Combo+, você pode aproveitar a Alura e o Alura Lingua por um preço
                 único.</h1>
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
@@ -98,7 +98,7 @@
         </ul>
         <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
         </p>
-        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições.<br> O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., <br>Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33
+        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33
         </p>
     </footer>
 
